# mango

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/src/: main.cpp
include/glad/: glad.h
include/mango/: engine.hpp
src/: engine.cpp  glad.c
